# char-gpt

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
char_gpt/: __init__.py  cli.py  dataset.py  model.py  sample.py  tokenizer.py  train.py
char_gpt/data/: pride_and_prejudice.txt
checkpoints/: char_gpt.pt
tests/: test_char_gpt.py
